<resources>
    <string name="app_name">Contact Book</string>
    <string name="add_contact">Add Contact</string>
    <string name="view_contacts">View Contacts</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="save_contact">Save Contact</string>
    <string name="search_contacts">Search Contacts...</string>
    <string name="update_contact">Update Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="edit_contact_title">Edit Contact</string>
</resources>